consolidated users and me. me has no use (yet). maybe it'll come back?\!
